<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qiushou"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.food.trace.RegisterActivity" >

    <TextView
        android:id="@+id/register_invisible_pos_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/sign_up_button" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_invisible_pos_mark"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_phone"
        android:layout_alignEnd="@+id/register_phone"
        android:layout_alignLeft="@+id/register_phone"
        android:layout_alignRight="@+id/register_phone"
        android:layout_alignTop="@+id/register_phone"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_password"
        android:layout_alignEnd="@+id/register_password"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignRight="@+id/register_password"
        android:layout_alignTop="@+id/register_password"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_code"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_confirm" 
        android:layout_alignLeft="@+id/register_confirm"
        android:layout_alignTop="@+id/register_confirm"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/verifycode"
        android:inputType="text" />

    <Button
        android:id="@+id/register_sendcode"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/register_confirm"
        android:layout_alignRight="@+id/register_confirm"
        android:layout_below="@+id/register_confirm"
        android:background="@drawable/click_code" />
    
</RelativeLayout>
